# PostWriter

./: .gitignore  CLAUDE.md  FINAL_TRANSFORMATION_REPORT.md  GITHUB_ISSUES.md  LICENSE  Makefile  NEXT_PHASES.md  PROJECT_STRUCTURE.md  REPAIR_STATUS_REPORT.md  Readme.md  SCRAPING_IMPROVEMENTS_REPORT.md  chrome_scraper.py  config.yaml  conftest.py  content_filter.py  database.py  exceptions.py  extract_cookies.py  generator.py  migrate_to_new_structure.py  postwriter.py  postwriter_new.py  pyproject.toml  pytest.ini  quick_scrape.py  rate_limiter.py  requirements.txt  scraper.py  scraper_http.py  secure_browser_storage.py  secure_chrome_proxy.py  secure_logging.py  secure_storage.py  security_audit_report.json  setup.py  test_browser.py  test_content_filter_real.py  test_sample_data.py  test_scraping_improvements.py
data/: filtered_posts_10_high_quality.json  posts.db
src/postwriter/: __init__.py
src/postwriter/cli/: __init__.py  main.py
src/postwriter/cli/commands/: __init__.py  analysis_commands.py  browser_commands.py  chrome_proxy_commands.py  scraping_commands.py  security_commands.py  testing_commands.py
src/postwriter/config/: __init__.py  settings.py  validator.py
src/postwriter/core/: __init__.py  analysis.py  database.py  scraper.py
src/postwriter/core/analysis/: __init__.py  analyzer.py
src/postwriter/core/database/: __init__.py
src/postwriter/core/scraper/: __init__.py  chrome_scraper.py  http_scraper.py
src/postwriter/security/: __init__.py  browser_storage.py  chrome_proxy.py  storage.py
src/postwriter/testing/: __init__.py  browser_manager.py  ui_supervisor.py  visual_validator.py
src/postwriter/testing/web_dashboard/: __init__.py  api.py
src/postwriter/testing/web_dashboard/static/: styles.css
src/postwriter/testing/web_dashboard/templates/: dashboard.html
src/postwriter/utils/: __init__.py  cookies.py  text_processing.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_browser_integration.py  test_security_integration.py
tests/performance/: __init__.py  test_performance.py
tests/security/: __init__.py
tests/unit/: __init__.py  test_browser_manager.py  test_security_logging.py  test_security_rate_limiter.py  test_security_storage.py
tests/visual/: __init__.py  test_visual_regression.py
utils/: __init__.py  cookies.py
